syntax = "proto3";

package com.road.yishi.proto.army;

message ArmyFightPosEditMsg {
  int32 userId = 1;
  int32 heroPos = 2;
  int32 pawnPos = 3;
  string serverName = 4;
}
