syntax = "proto3";

package com.road.yishi.proto.team;

message MemberFightPosListMsg {
  bool isGet = 1;
  repeated int32 memberPos = 2;
}
